syntax = "proto3";

package auth;
option go_package = "github.com/Dzaakk/micro-commerce/proto/auth";


service AuthService {
    rpc Register(RegisterRequest) returns (AuthResponse);
    rpc Login(LoginRequest) returns (AuthResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);
    rpc GetUser(GetUserRequest) returns (UserResponse);
}

// Messages
message RegisterRequest {
    string email = 1;
    string username = 2;
    string password = 3;
    string first_name = 4;
    string last_name = 5;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message AuthResponse {
    string access_token = 1;
    string refresh_token = 2;
    int64 expires_in = 3;
    User user = 4;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    int64 user_id = 2;
    string email = 3;
    string role = 4;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message GetUserRequest {
    int64 id = 1;
}

message UserResponse {
    User user = 1;
}

message User {
    int64 id = 1;
    string email = 2;
    string username = 3;
    string first_name = 4;
    string last_name = 5;
    string role = 6;
    bool is_active = 7;
    string created_at = 8;
    string updated_at = 9;
}